--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "apexcharts": "^4.3.0",
     "clsx": "^2.1.1",
     "flowbite": "^2.5.2",
     "next": "15.1.3",
     "prisma": "^6.2.0",
     "prisma-client": "^0.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-apexcharts": "^1.7.0",
+    "react-dom": "^19.0.0",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
