--- a/nginx.conf
+++ b/nginx.conf
@@ -5,14 +5,8 @@ server {
 
     root /usr/share/nginx/html;
     index index.html;
-
+    error_page 404 /404.html;
     location / {
-        try_files $uri /index.html;
-    }
-
-    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|otf)$ {
-        expires 6M;
-        access_log off;
-        add_header Cache-Control "public";
+        try_files $uri $uri/ $uri.html =404;
     }
 }
