--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,21 @@
 server {
     listen 80;
-
     server_name localhost;
 
-    root /usr/share/nginx/html;
-    index index.html;
-    error_page 404 /404.html;
-    location / {
-        try_files $uri $uri/ $uri.html =404;
-    }
+    return 301 https://$host$request_uri;
+}
+
+server {
+   listen 443 ssl;
+   server_name localhost;
+
+   ssl_certificate /etc/nginx/certs/selfsigned.crt;
+   ssl_certificate_key /etc/nginx/certs/selfsigned.key;
+
+   root /usr/share/nginx/html;
+   index index.html;
+
+   location / {
+       try_files $uri $uri/ $uri.html =404;
+   }
 }
