--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "^4.3.0",
     "clsx": "^2.1.1",
     "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
     "next": "15.1.3",
     "prisma": "^6.2.0",
     "prisma-client": "^0.0.0",
