Arreglo lista exportada

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,10 +2,24 @@ server {
     listen 80;
     server_name localhost;
 
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name localhost;
+
+    ssl_certificate /etc/ssl/certs/server.crt;
+    ssl_certificate_key /etc/ssl/private/server.key;
+
     root /usr/share/nginx/html;
-    index index.html;
 
     location / {
-       try_files $uri $uri/ $uri.html =404;
+        try_files $uri $uri.html $uri/ =404;
+    }
+
+    error_page 404 /404.html;
+    location = /404.html {
+        internal;
     }
 }
