--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "next": "15.1.3",
+    "next-auth": "^5.0.0-beta.25",
     "prisma": "^6.2.0",
     "prisma-client": "^0.0.0",
     "react": "^19.0.0",
