--- a/nginx.conf
+++ b/nginx.conf
@@ -1,25 +1,24 @@
-server {
-    listen 80;
-    server_name localhost;
+http {
+    server {
+        listen 80;
+        server_name localhost;
 
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen 443 ssl;
-    server_name localhost;
-
-    ssl_certificate /etc/ssl/certs/server.crt;
-    ssl_certificate_key /etc/ssl/private/server.key;
-
-    root /usr/share/nginx/html;
-
-    location / {
-        try_files $uri $uri.html $uri/ =404;
+        return 301 https://$host$request_uri;
     }
 
-    error_page 404 /404.html;
-    location = /404.html {
-        internal;
+    server {
+        listen 443 ssl;
+        server_name localhost;
+
+        ssl_certificate /etc/nginx/certs/cert.pem;
+        ssl_certificate_key /etc/nginx/certs/key.pem;
+
+        location / {
+            proxy_pass http://app:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
