--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       POSTGRES_USER: metalairen
       POSTGRES_PASSWORD: metalairen
       POSTGRES_DB: metalairen
+    ports:
+     - "5432:5432"
     volumes:
       - ./dump.sql:/docker-entrypoint-initdb.d/dump.sql
     networks:
