--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@prisma/client": "^6.1.0",
     "apexcharts": "^4.3.0",
     "clsx": "^2.1.1",
+    "dom-to-image": "^2.6.0",
+    "dom-to-image-more": "^3.6.0",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
+    "html2canvas": "^1.4.1",
     "next": "15.1.3",
     "next-auth": "^5.0.0-beta.25",
     "prisma": "^6.2.0",
@@ -25,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/dom-to-image": "^2.6.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
