Fix server name

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,14 @@
 http {
     server {
         listen 80;
-        server_name next.metalairen.com.ar;
+        server_name metalairen.com.ar;
 
         return 301 https://$host$request_uri;
     }
 
     server {
         listen 443 ssl;
-        server_name next.metalairen.com.ar;
+        server_name metalairen.com.ar;
 
         ssl_certificate /etc/nginx/certs/cert.pem;
         ssl_certificate_key /etc/nginx/certs/key.pem;
